--- a/frontend/my-react-app/src/Components/JournalForm.css
+++ b/frontend/my-react-app/src/Components/JournalForm.css
@@ -62,3 +62,17 @@ body{
     border-radius: 5px;
     box-shadow: 5px 5px 5px hsla(0, 0%, 0%, 0.1);
 }
+.message-list{
+        display: flex;                 
+        justify-content: center;       
+        align-items: center;           
+}
+.heading-2{
+    align-items: center;
+    width: 200px;             
+    height: 200px;            
+    background-color: #3498db;
+    border: 2px solid #2c3e50; 
+    padding: 10px;            
+    margin: 20px; 
+}
